package io.rileyhe1.concurrency.Data;
@SuppressWarnings("unused")
public class ChunkResult
{
    private String tempFilePath;
    private long bytesDownloaded;
    private boolean success;
    private Exception error;
}
