package io.rileyhe1.concurrency.Data;

public class DownloadConfig
{
    public static final int NUM_THREADS = 10;
    public static final long CHUNK_SIZE = 10;
    public static final int CONNECTION_TIMEOUT = 10;
    public static final int MAX_RETRIES = 10;
    public static final String TEMP_DIRECTORY = "./";
}
