package io.rileyhe1.concurrency.Data;

public enum DownloadState 
{
    PENDING,
    DOWNLOADING,
    PAUSED,
    COMPLETED,
    FAILED,
    CANCELLED   
}
