package io.rileyhe1.concurrency.Util;

import java.util.List;

import io.rileyhe1.concurrency.Data.ChunkResult;

@SuppressWarnings("unused")
public class FileAssembler
{
    public void assembleChunks(List<ChunkResult> results, String destination)
    {
        
    }

    private void mergeFiles(List<String> tempFiles, String output)
    {

    }

    private void cleanupTempFiles(List<String> tempFiles)
    {

    }
}
